--- a/angular/src/index.html
+++ b/angular/src/index.html
@@ -15,9 +15,8 @@
 </head>
 <body>
   <h1>Header outside</h1>
-  <my-app>
-    <div slot1>This is content...</div>
-    <div slot2>This is content2...</div>
-  </my-app>
+
+  <custom-button label="please"></custom-button>
+
 </body>
 </html>
