--- a/react-wc/src/index.html
+++ b/react-wc/src/index.html
@@ -14,6 +14,6 @@
 
     <body>
         <h1>Outside header</h1>
-        <my-component><div>sdfsdf</div></my-component>
+        <custom-button label="please"></custom-button>
     </body>
 </html>
