--- a/vue/public/index.html
+++ b/vue/public/index.html
@@ -6,12 +6,15 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>vue</title>
+    <style>
+      h1 {
+        color:red;
+      }
+    </style>
   </head>
   <body>
-    <noscript>
-      <strong>We're sorry but vue doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
+    <h1>Outside header</h1>
+    <custom-button label="please"></custom-button>
     <!-- built files will be auto injected -->
   </body>
 </html>
